--- a/haproxy/deps/haproxy.cfg
+++ b/haproxy/deps/haproxy.cfg
@@ -45,3 +45,4 @@ backend flask
     http-request add-header X-Forwarded-Proto https if { ssl_fc }
     option httpchk HEAD / HTTP/1.1\r\nHost:localhost
     server flask1 flask1:5000 check
+    server flask2 flask2:5000 check
